2009-05-28  Matthew Mundell <mmundell@intevation.de>

	Add type nvtis for collections of NVT Infos.

	* libopenvascommon/nvti.c (free_nvti_for_hash_table, make_nvtis)
	(free_nvtis, nvtis_size, add_nvti, find_nvti): New functions.

	* libopenvascommon/nvti.h: Update headers.  Add single include guard.

	* ChangeLog: Add log missed yesterday.

2009-05-28  Felix Wolfsteller  <felix.wolfsteller@intevation.de>

	* libopenvascommon/nvti.c (nvti_to_keyfile): Fixed mem leak by freeing
	text, added TODO as function returns 0 also in case of errors.

2009-05-27  Matthew Mundell <mmundell@intevation.de>

	* Makefile (install): Install libopenvascommon/nvti.h.

2009-05-27  Matthew Mundell <mmundell@intevation.de>

	* libopenvascommon/nvti.c: Correct function name.

2009-05-27  Matthew Mundell <mmundell@intevation.de>

	* libopenvascommon/nvti.h, libopenvascommon/nvti.c: Reformat to match
	standard.

2009-05-27  Matthew Mundell <mmundell@intevation.de>

	* ChangeLog: Flush trailing whitespace.

2009-05-27  Laban Mwangi <lmwangi@penguinlabs.co.ke>

	Adding initial support for logging.

	* libopenvas/openvas_logging.c, libopenvas/openvas_logging.h: New.
	Shared logging functions.

	* libopenvas/Makefile openvas-libraries.tmpl.in Makefile: Updated.

	* MANIFEST: Updated.

2009-05-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Adding a initial version for NVT Info objects.

	* libopenvascommon/, libopenvascommon/nvti.h,
	libopenvascommon/nvti.c, libopenvascommon/README.txt: New.
	A module for handling NVT Info objects.

	* libopenvas/Makefile: Added handling of module
	"libopenvascommon/nvti".

	* MANIFEST: Updated.

2009-05-19  Matthew Mundell <mmundell@intevation.de>

	Add authentication facilities.

	* libopenvas/openvas_auth.c: New file.  Contains functions digest_hex and
	get_password_hashes from ../config-manager/src/openvascd.c.
	* libopenvas/openvas_auth.h: New file.

	* libopenvas/Makefile (openvas_auth.o): New rule.

	* Makefile (install): Add openvas_auth.h.