@@ -1,5 +1,10 @@
 2009-05-28  Matthew Mundell <mmundell@intevation.de>
 
+	* libopenvascommon/nvti.c (nvti_to_keyfile): Rename gerror to error.  Free
+	error after use.  Add error->message to error message.
+
+2009-05-28  Matthew Mundell <mmundell@intevation.de>
+
 	Add type nvtis for collections of NVT Infos.
 
 	* libopenvascommon/nvti.c (free_nvti_for_hash_table, make_nvtis)
